# finetune_embeddings

./: .env.example  .gitignore  DATASET_CARD.md  MODEL_CARD_INSTRUCT.md  process.md  pyproject.toml  readme.md
.claude/: settings.local.json
cards/model_cards/: MODEL_CARD_E5_LARGE.md  MODEL_CARD_E5_LARGE_INSTRUCT.md  MODEL_CARD_QWEN3_0_6B_DUTCH_REGS.md  MODEL_CARD_QWEN3_4B_DUTCH_REGS.md  MODEL_CARD_QWEN3_8B.md
data/chunks/: chunks_with_context.jsonl  chunks_without_context.jsonl
data/documents/: UAVG.txt
data/synthetic/: uavg_query_pairs.jsonl
evaluation/: eval_combined.py  eval_openai.py  prepare_eval_combined.py  results_combined_20260323_195959.json  results_combined_20260323_221519.json
finetuning/data_preparation/: prepare_dataset.py
finetuning/e5_large_stage1/: diagnose.py  diagnose_instructions.py  finetune_stage1.py  prepare_dataset.py
finetuning/e5_large_stage2/: finetune_stage2.py  mine_negatives.py
finetuning/qwen3/: eval_baseline.py  finetune_stage1.py  finetune_stage2.py  mine_negatives.py
finetuning/qwen3_0_6b/: eval_baseline.py  (+3 more)
learnings/: GPU_LEARNINGS.md  blog.md  process.md
model_cards/: MODEL_CARD_INSTRUCT.md  MODEL_CARD_QWEN3_0_6B.md  MODEL_CARD_QWEN3_4B.md  MODEL_CARD_QWEN3_8B.md
synthetic_dataset_creation/: analyze_queries.py  chunker.py  generate_multihop_queries.py  generate_queries.py  prepare_hf_dataset.py  score_and_filter_queries.py  upload_readme_to_hf.py  upload_to_hf.py  view_dataset.py
upload_to_hf/: DATASET_CARD.md  README.md  __init__.py  upload_dataset.py  upload_model.py  upload_qwen3_4b.py  upload_readme.py
(+29 files in other folders)
